examples/type_system/failing/143_match_bool_missing_false.flx
// E015: Bool match missing false branch.
fn main() -> Unit {
    let b = true
    let _x = match b {
        true -> 1
    }
}
